# ToDo-App

./: .gitignore  CLAUDE.md  Constitution.md  README.md  pyproject.toml
.spec-kit/: config.yaml
backend/: CLAUDE.md  pyproject.toml  todo.db
backend/src/todo_app/: agent.py  auth.py  chatkit.py  database.py  main.py  manager.py  mcp.py  models.py
backend/tests/: simulate_agent.py
frontend/: CLAUDE.md  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/auth/signin/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: ChatInterface.tsx  Navbar.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/lib/: api.ts  auth-client.ts  auth.ts
specs/api/: mcp-tools.md  rest-endpoints.md
specs/database/: schema.md
specs/features/: authentication.md  basic-features.md  chatbot.md
src/todo_app/: main.py  manager.py  models.py
tests/: test_manager.py
