[project]
name = "todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
