[project]
name = "todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "mcp>=1.26.0",
    "openai>=2.17.0",
    "openai-chatkit>=1.6.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.32",
    "uvicorn[standard]>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
